# moon-dev-ai-agents

./: .env_example  .gitignore  AGENT_COMMANDS.md  AGENT_HEALTH_REPORT.md  AGENT_UPDATE_GUIDE.md  AI_PROMPT_EXAMPLES.md  ARCHITECTURE_DIAGRAMS.md  AlignedMomentum.html  BACKTESTING.md  BTC-USD-15m.csv  CHANGELOG_OPENROUTER.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DivergenceFlow.html  Dockerfile  GETTING_STARTED.md  HFT_SELF_IMPROVING.md  HYPERLIQUID_TESTNET_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  JUPITER_SOLANA_DEVNET_SETUP.md  MAReversalStrategy(ma_fast=13,ma_slow=39,take_profit=0.14,stop_loss=0.06).html  MAReversalStrategy.html  MCP_SETUP.md  MIGRATION_PROGRESS.md  MIGRATION_TO_EXTERNAL_DRIVE.md  MULTI_ASSET_GUIDE.md  MULTI_TIMEFRAME_SETUP.md  Moondev.csv  Moondev.xlsx  NanosecondLiquidity_v6.py  OPENROUTER_KEY_ROTATION.md  POLYMARKET_SETUP.md  PRODUCTION_SETUP.md  PROJECT_COMPLETE.md  QUANT_AGENTS_IMPLEMENTATION_STATUS.md  QUANT_AGENTS_INTEGRATION_GUIDE.md  QUANT_AGENTS_QUICKSTART.md  QUICKSTART.md  README.md  (+78 more)
MOON_DEV_EDA_KAFKA_DESIGN/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/: giveaway_agent.md  monitoring_and_dashboard.md  polymarket_agents.md  rbi_agent.md
examples/: portfolio_momentum_example.py
infrastructure/: prometheus.yml  schema.sql  schema_quant.sql
k8s/: values.yaml
pinescript/: ATRMeanReversion.txt  AccumulationManipulation.txt  DivergenceVolatility_AI6.txt
scripts/: check_agent_updates.py  security_check.py  test_openrouter.py
spec/: constitution.md
src/: binance_nice_funcs.py  config.py  main.py  mcp_client.py  nice_funcs.py  nice_funcs_aster.py  nice_funcs_hyperliquid.py  spec_driven_main.py
src/agents/: agent_health_monitor.py  api.py  backtest_runner.py  chartanalysis_agent.py  chat_agent_ad.py  clips_agent.py  code_runner_agent.py  coingecko_agent.py  copybot_agent.py  example_monitored_agent.py  focus_agent.py  funding_agent.py  fundingarb_agent.py  giveaway_agent.py  liquidation_agent.py  listingarb_agent.py  model_helper.py  new_or_top_agent.py  phone_agent.py  polymarket_agent.py  portfolio_tracker.py  prompt_agent.py  rbi_agent.py  rbi_agent_pp.py  rbi_agent_pp_multi.py  rbi_agent_v2.py  rbi_agent_v2_simple.py  rbi_batch_backtester.py  research_agent.py  risk_agent.py  scrape_agent.py  sentiment_agent.py  strategy_agent.py  swarm_agent.py  trading_agent.py  tweet_agent.py  video_agent.py  whale_agent.py
src/agents/quant/: README.md  (+14 more)
src/api/: __init__.py  main.py
src/backtesting/: __init__.py  calculator.py  engine.py  report.py
src/config/: mcp_config.py  multi_timeframe_config.py  portfolio_config.py
src/consensus/: __init__.py  consensus_engine.py  consensus_models.py  signal_aggregator.py
src/core/: __init__.py  cache_layer.py  event_consumer.py  event_producer.py  event_store.py  models.py
src/data/: ohlcv_collector.py  tick_collector.py
src/execution/: __init__.py  engine.py  exchange_adapter.py  risk_validator.py
src/llm/: __init__.py  adapters.py  client.py  factory.py
src/models/: README.md  glm_model.py  model_factory.py  moonshot_model.py  ollama_model.py  openrouter_model.py
src/quant/: 2xmareversal.py  BTCUSD-1d-100wks-data.csv  README.md  pure_liquidation_momentum.py
src/scripts/: backtestdashboard.py  download_multi_asset_data.py  download_multi_timeframe_data.py  fix_csv_link_columns.py  health_dashboard.py  multi_asset_tester.py  portfolio_dashboard.py  test_extended.py  test_groq_qwen.py  test_js_scraping.py  test_multi_timeframe.py
src/spec_driven_agents/: async_swarm_agent.py  decision_agent.py  drl_agent.py  indicator_agent.py  lob_agent.py  pattern_agent.py  test_agents.py
src/strategy/: hft_improver_deepseek.py  hft_live_dryrun.py  hft_multi_timeframe.py  hft_self_improving_loop.py  llm_strategy_improver.py  research_improver.py  self_improving_loop.py  strategy_updater.py
src/templates/: portfolio_strategy_template.py
src/utils/: __init__.py  telegram_notifier.py  trade_logger.py
tests/: test_llm_client.py
tests/chaos/: __init__.py  test_database_resilience.py  test_kafka_resilience.py
tests/integration/: README.md  __init__.py  conftest.py  test_agents_consensus.py  test_api.py  test_event_flow.py
tests/load/: __init__.py  locustfile.py
tests/unit/: __init__.py  test_consensus.py  test_event_models.py  test_execution.py
(+139 files in other folders)
